Fixed alignment issue for modal headings

--- a/src/components/modals/appearModal/appearModal.styles.scss
+++ b/src/components/modals/appearModal/appearModal.styles.scss
@@ -6,6 +6,7 @@
     @apply h-screen;
     z-index: 9998;
     overflow-x: auto;
+    @apply text-left;
 }
 
 .dlp-slide-in {
